Refactored code to use commandcontext througout and IEditable, obsoleting some Save stuff on IEditManager (IEditable breaking change, IDependentEntity<T> breaking change)

--- a/docs/history.txt
+++ b/docs/history.txt
@@ -1,5 +1,6 @@
 ﻿2.2
-- Youtube videp player
+- Google map
+- Youtube video player
 - Carousel slider for dinamico
 - State of deleted items is set to deleted
 - Remove language association from deleted items
